--- a/CSS_Coursera_hw2/chenxi_neighborhood.html
+++ b/CSS_Coursera_hw2/chenxi_neighborhood.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Neighborhood Walk</title>
-  <link rel="stylesheet" href="../css/CSS_for_hw2.css">
+  <link rel="stylesheet" href="CSS_for_hw2.css">
 </head>
 
 <body>
